# hackathon-1-book-creation

./: .dockerignore  .gitignore  README.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/docs/01-Introduction/: _category_.json  index.md
docs/docs/02-ROS-2-Fundamentals/: _category_.json  nodes-topics-services.md  python-rclpy-bridge.md  urdf-humanoids.md
docs/docs/03-Digital-Twins/: _category_.json  gazebo-simulation.md  sensor-simulation.md  unity-visualization.md
docs/docs/04-NVIDIA-Isaac/: _category_.json  isaac-ros-vslam.md  isaac-sim.md  nav2-humanoid-navigation.md
docs/docs/05-VLA-Models/: _category_.json  llm-planning.md  voice-to-action.md
docs/docs/06-Capstone-Project/: _category_.json  autonomous-humanoid.md
frontend/: docusaurus.config.ts  package-lock.json
frontend/docs/01-Introduction/: _category_.json  getting-started.md  index.md
frontend/docs/02-ROS-2-Fundamentals/: 01-nodes.md  02-lab-pubsub.md  _category_.json  index.md
frontend/docs/03-Digital-Twins/: _category_.json  index.md
frontend/docs/04-NVIDIA-Isaac/: 02-lab-isaac-ros.md  _category_.json  index.md
frontend/docs/05-VLA-Models/: _category_.json  index.md
frontend/docs/06-Capstone-Project/: _category_.json  index.md
labs/: Dockerfile
labs/module-2-isaac/lab_1_isaac_integration/: package.xml  setup.cfg  setup.py
labs/module-2-isaac/lab_1_isaac_integration/lab_1_isaac_integration/: __init__.py
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+16 files in other folders)
