<?xml version="1.0"?>
<package format="3">
  <name>lab_1_isaac_integration</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Isaac Sim integration lab.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
